--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -265,7 +265,7 @@ stages:
               downloadPath: '$(Build.SourcesDirectory)'
 
           - task: PowerShell@2
-            name: publishPrerelease
+            name: publishRelease
             displayName: 'Publish Prerelease'
             inputs:
               filePath: './build.ps1'
