--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -248,7 +248,7 @@ stages:
           eq(variables['Build.SourceBranch'], 'refs/heads/master'),
           startsWith(variables['Build.SourceBranch'], 'refs/tags/')
         ),
-        startsWith(variables['Build.Repository.Name'], 'dsccommunity')
+        contains(variables['System.TeamFoundationCollectionUri'], 'dsccommunity')
       )
     jobs:
       - job: Deploy_Module
