Updated pipeline files to support change of master to main

--- a/build.yaml
+++ b/build.yaml
@@ -74,6 +74,7 @@ DscTest:
     - output
   ExcludeModuleFile:
     - Modules/DscResource.Common
+  MainGitBranch: main
 
 Resolve-Dependency:
   Gallery: 'PSGallery'
