Updated build to use Sampler.GitHubTasks - Fixes #711

--- a/build.yaml
+++ b/build.yaml
@@ -84,6 +84,8 @@ Resolve-Dependency:
 ModuleBuildTasks:
   Sampler:
     - '*.build.Sampler.ib.tasks'
+  Sampler.GitHubTasks:
+    - '*.ib.tasks'
 
 TaskHeader: |
   param($Path)
