--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -24,7 +24,7 @@ stages:
       - job: Package_Module
         displayName: 'Package Module'
         pool:
-          vmImage: 'ubuntu 16.04'
+          vmImage: 'windows-2022'
         steps:
           - task: GitVersion@5
             name: gitversion
@@ -32,17 +32,6 @@ stages:
             inputs:
               runtime: 'core'
               configFilePath: 'GitVersion.yml'
-
-          - script: |
-              wget https://github.com/microsoft/omi/releases/download/v1.6.8-0/omi-1.6.8-0.ssl_100.ulinux.x64.deb
-              wget https://github.com/microsoft/PowerShell-DSC-for-Linux/releases/download/v1.2.1-0/dsc-1.2.1-0.ssl_100.x64.deb
-
-              sudo dpkg -i omi-1.6.8-0.ssl_100.ulinux.x64.deb dsc-1.2.1-0.ssl_100.x64.deb
-
-              # This is a fix to the following DSC for Linux issue: https://github.com/microsoft/PowerShell-DSC-for-Linux/issues/674
-              sudo mv /etc/opt/omi/conf/dsc/configuration/baseregistration /etc/opt/omi/conf/dsc/configuration/BaseRegistration
-              sudo mv /etc/opt/omi/conf/dsc/configuration/BaseRegistration/baseresource.schema.mof /etc/opt/omi/conf/dsc/configuration/BaseRegistration/BaseResource.schema.mof
-            displayName: 'Install DSC for Linux'
 
           - task: PowerShell@2
             name: package
@@ -134,7 +123,7 @@ stages:
         displayName: 'Publish Code Coverage'
         dependsOn: Test_Unit_2016
         pool:
-          vmImage: 'ubuntu 16.04'
+          vmImage: 'ubuntu-16.04'
         timeoutInMinutes: 0
         steps:
           - task: DownloadPipelineArtifact@2
@@ -280,7 +269,7 @@ stages:
       - job: Deploy_Module
         displayName: 'Deploy Module'
         pool:
-          vmImage: 'ubuntu 16.04'
+          vmImage: 'ubuntu-16.04'
         steps:
           - task: DownloadPipelineArtifact@2
             displayName: 'Download Pipeline Artifact'
