Added Publish_GitHub_Wiki_Content to build stage of pipeline

--- a/build.yaml
+++ b/build.yaml
@@ -51,6 +51,7 @@ BuildWorkflow:
   publish:
     - Publish_Release_To_GitHub
     - Publish_Module_To_gallery
+    - Publish_GitHub_Wiki_Content
 
 ####################################################
 #       PESTER Configuration                       #
