Update build files to allow module to build

--- a/GitVersion.yml
+++ b/GitVersion.yml
@@ -6,7 +6,7 @@ patch-version-bump-message: '\s?(fix|patch)'
 no-bump-message: '\+semver:\s?(none|skip)'
 assembly-informational-format: '{NuGetVersionV2}+Sha.{Sha}.Date.{CommitDate}'
 branches:
-  master:
+  main:
     tag: preview
     regex: ^main$
   pull-request:
@@ -15,12 +15,12 @@ branches:
     tag: useBranchName
     increment: Minor
     regex: f(eature(s)?)?[\/-]
-    source-branches: ['master']
+    source-branches: ['main']
   hotfix:
     tag: fix
     increment: Patch
     regex: (hot)?fix(es)?[\/-]
-    source-branches: ['master']
+    source-branches: ['main']
 ignore:
   sha: []
 merge-message-formats: {}
